fix scrollbar issue, udpdate scroll to top component

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -22,7 +22,6 @@
 }
 
 html{
-  scrollbar-gutter: stable; /* this prevent layout changes, even if the scrollbar appear/disappear, the space is reserved for it */
 }
 
 body {
